@@ -1,0 +1,5 @@
+/* Test DFP macros not defined in <float.h> for C11.  */
+/* { dg-do compile } */
+/* { dg-options "-std=c11" } */
+
+#include "c2x-float-no-dfp-1.c"
